🐛 Fix wrong font

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
 	font-size: 12px;
-	font-family: monospace;
+	font-family: "SauceCodePro Nerd Font Mono";
 }
 
 window#waybar {
